Fix alignment of task information

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,11 @@ button:hover {
     transition: background-color 0.3s ease;
 }
 
+.todo > div {
+    width: 200px;
+    flex: 1 0 1;
+}
+
 #todos > todo:hover {
     background-color: #ffffff;
 }
